Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -11,3 +11,278 @@
 ## Введение
 
 Работа с текстом - важная часть работы каждого системного администратора. Дуг Макилрой, член первоначальной группы разработчиков Unix, резюмировал философию Unix и сказал (среди прочего): «Пишите программы для обработки текстовых потоков, потому что это универсальный интерфейс». Linux вдохновлен операционной системой Unix и твердо придерживается ее философии, поэтому администратор должен ожидать наличия множества инструментов для обработки текста в дистрибутиве Linux.
+
+
+## Краткий обзор перенаправлений и каналов
+
+Также из философии Unix: 
+* Пишите программы, которые делают одно дело и делают это хорошо. 
+* Напишите программы для совместной работы. 
+
+Один из основных способов заставить программы работать вместе - это *конвейеры* и *перенаправления*. Практически все ваши программы обработки текста будут получать текст из стандартного ввода (*stdin*), выводить его на стандартный вывод (*stdout*) и отправлять возможные ошибки на стандартный вывод ошибок (*stderr*). Если вы не укажете иное, стандартным вводом будет то, что вы вводите на клавиатуре (программа прочитает его после того, как вы нажмете клавишу Enter). Точно так же стандартный вывод и ошибки будут отображаться на экране вашего терминала. Посмотрим, как это работает. 
+
+В терминале введите `cat` и нажмите клавишу Enter. Затем введите произвольный текст.
+
+```console
+$ cat
+This is a test
+This is a test
+Hey!
+Hey!
+It is repeating everything I type!
+It is repeating everything I type!
+(I will hit ctrl+c so I will stop this nonsense)
+(I will hit ctrl+c so I will stop this nonsense)
+^C
+```
+
+Для получения дополнительной информации о команде `cat` (термин происходит от «конкатенация») обратитесь к страницам руководства.
+
+>Если вы работаете с действительно простой установкой сервера Linux, некоторые команды, такие как `info` и `less`, могут быть недоступны. В этом случае установите эти инструменты, используя соответствующую процедуру в вашей системе, как описано в соответствующих уроках.
+
+Как показано выше, если вы не укажете, откуда `cat` должен читать, он будет читать со стандартного ввода (независимо от того, что вы вводите) и выводить все, что он читает, в окно вашего терминала (его стандартный вывод). 
+
+Теперь попробуйте следующее:
+
+```console
+$ cat > mytextfile
+This is a test
+I hope cat is storing this to mytextfile as I redirected the output
+I will hit ctrl+c now and check this
+^C
+
+$ cat mytextfile
+This is a test
+I hope cat is storing this to mytextfile as I redirected the output
+I will hit ctrl+c now and check this
+```
+
+Символ `>` (больше) указывает `cat` направлять вывод в файл `mytextfile`, а не в стандартный вывод. А теперь попробуйте это:
+
+```console
+$ cat mytextfile > mynewtextfile
+$ cat mynewtextfile
+This is a test
+I hope cat is storing this to mytextfile as I redirected the output
+I will hit ctrl+c now and check this
+```
+
+Это имеет эффект копирования `mytextfile` в `mynewtextfile`. Фактически вы можете проверить, что эти два файла имеют одинаковое содержимое, выполнив сравнение:
+
+```console
+$ diff mynewtextfile mytextfile
+```
+
+Поскольку нет вывода, файлы равны. Теперь попробуйте добавить оператор перенаправления (`>>`):
+
+```console
+$ echo 'This is my new line' >> mynewtextfile
+$ diff mynewtextfile mytextfile
+4d3
+< This is my new line
+```
+
+До сих пор мы использовали перенаправления для создания файлов и управления ими. Мы также можем использовать каналы (обозначенные символом `|`) для перенаправления вывода одной программы в другую программу. Найдем строки, в которых встречается слово «это»:
+
+```console
+$ cat mytextfile | grep this
+I hope cat is storing this to mytextfile as I redirected the output
+I will hit ctrl+c now and check this
+
+$ cat mytextfile | grep -i this
+This is a test
+I hope cat is storing this to mytextfile as I redirected the output
+I will hit ctrl+c now and check this
+```
+
+Теперь мы передали вывод `cat` другой команде: `grep`. Обратите внимание, когда мы игнорируем регистр (используя параметр `-i`), в результате мы получаем дополнительную строку.
+
+
+## Обработка текстовых потоков
+
+### Чтение сжатого файла
+
+Мы создадим файл `ftu.txt`, содержащий список следующих команд:
+
+```console
+bzcat
+cat
+cut
+head
+less
+md5sum
+nl
+od
+paste
+sed
+sha256sum
+sha512sum
+sort
+split
+tail
+tr
+uniq
+wc
+xzcat
+zcat
+```
+
+Теперь мы воспользуемся командой `grep`, чтобы распечатать все строки, содержащие строку `cat`:
+
+```console
+$ cat ftu.txt | grep cat
+bzcat
+cat
+xzcat
+zcat
+```
+
+Другой способ получить эту информацию - просто использовать команду `grep` для прямой фильтрации текста без необходимости использовать другое приложение для отправки текстового потока на `stdout`.
+
+```console
+$ grep cat ftu.txt
+bzcat
+cat
+xzcat
+zcat
+```
+
+>Помните, что есть много способов выполнить одну и ту же задачу в Linux.
+
+Существуют и другие команды, которые обрабатывают сжатые файлы (`bzcat` для сжатых файлов `bzip`, `xzcat` для сжатых файлов `xz` и `zcat` для сжатых файлов `gzip`), и каждая из них используется для просмотра содержимого сжатого файла на основе используемого алгоритма сжатия. 
+
+Убедитесь, что только что созданный файл `ftu.txt` является единственным в каталоге, затем создайте версию файла, сжатую с помощью `gzip`:
+
+```console
+$ ls ftu*
+ftu.txt
+
+$ gzip ftu.txt
+$ ls ftu*
+ftu.txt.gz
+```
+
+Затем используйте команду `zcat`, чтобы просмотреть содержимое сжатого файла, сжатого `gzip`:
+
+```console
+$ zcat ftu.txt.gz
+bzcat
+cat
+cut
+head
+less
+md5sum
+nl
+od
+paste
+sed
+sha256sum
+sha512sum
+sort
+split
+tail
+tr
+uniq
+wc
+xzcat
+zcat
+```
+
+Обратите внимание, что `gzip` сжимает `ftu.txt` в `ftu.txt.gz` и удаляет исходный файл. По умолчанию вывод команды `gzip` не отображается. Однако, если вы действительно хотите, чтобы `gzip` сообщал вам, что он делает, используйте параметр `-v` для «подробного» вывода.
+
+
+### Просмотр файла c пагинацией
+
+Вы знаете, что `cat` объединяет файл со стандартным выводом (когда файл предоставляется после команды). В файле `/var/log/syslog` ваша система Linux хранит все важное, что происходит в вашей системе. Использование команды `sudo` для повышения привилегий, чтобы иметь возможность читать файл `/var/log/syslog`:
+
+```console
+$ sudo cat /var/log/syslog
+```
+
+…вы увидите, как очень быстро прокручиваются сообщения в окне вашего терминала. Вы можете передавать вывод в программу меньше, чтобы результаты были разбиты на страницы. Используя `less`, вы можете использовать клавиши со стрелками для навигации по выходным данным, а также использовать `vi`-подобные команды для навигации и поиска по тексту. 
+
+Однако вместо того, чтобы передавать команду `cat` в программу разбиения на страницы, более прагматично просто использовать программу разбиения на страницы напрямую:
+
+```console
+$ sudo less /var/log/syslog
+... (output omitted for clarity)
+```
+
+
+### Получение части текстового файла
+
+Если необходимо проверить только начало или конец файла, доступны другие методы. Команда `head` используется для чтения первых десяти строк файла по умолчанию, а `tail` команды используется для чтения последних десяти строк файла по умолчанию. А теперь попробуйте:
+
+```console
+$ sudo head /var/log/syslog
+Nov 12 08:04:30 hypatia rsyslogd: [origin software="rsyslogd" swVersion="8.1910.0" x-pid="811" x-info="https://www.rsyslog.com"] rsyslogd was HUPed
+Nov 12 08:04:30 hypatia systemd[1]: logrotate.service: Succeeded.
+Nov 12 08:04:30 hypatia systemd[1]: Started Rotate log files.
+Nov 12 08:04:30 hypatia vdr: [928] video directory scanner thread started (pid=882, tid=928, prio=low)
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'A - ATSC'
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'C - DVB-C'
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'S - DVB-S'
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'T - DVB-T'
+Nov 12 08:04:30 hypatia vdr[882]: vdr: no primary device found - using first device!
+Nov 12 08:04:30 hypatia vdr: [929] epg data reader thread started (pid=882, tid=929, prio=high)
+$ sudo tail /var/log/syslog
+Nov 13 10:24:45 hypatia kernel: [ 8001.679238] mce: CPU7: Core temperature/speed normal
+Nov 13 10:24:46 hypatia dbus-daemon[2023]: [session uid=1000 pid=2023] Activating via systemd: service name='org.freedesktop.Tracker1.Miner.Extract' unit='tracker-extract.service' requested by ':1.73' (uid=1000 pid=2425 comm="/usr/lib/tracker/tracker-miner-fs ")
+Nov 13 10:24:46 hypatia systemd[2004]: Starting Tracker metadata extractor...
+Nov 13 10:24:47 hypatia dbus-daemon[2023]: [session uid=1000 pid=2023] Successfully activated service 'org.freedesktop.Tracker1.Miner.Extract'
+Nov 13 10:24:47 hypatia systemd[2004]: Started Tracker metadata extractor.
+Nov 13 10:24:54 hypatia kernel: [ 8010.462227] mce: CPU0: Core temperature above threshold, cpu clock throttled (total events = 502907)
+Nov 13 10:24:54 hypatia kernel: [ 8010.462228] mce: CPU4: Core temperature above threshold, cpu clock throttled (total events = 502911)
+Nov 13 10:24:54 hypatia kernel: [ 8010.469221] mce: CPU0: Core temperature/speed normal
+Nov 13 10:24:54 hypatia kernel: [ 8010.469222] mce: CPU4: Core temperature/speed normal
+Nov 13 10:25:03 hypatia systemd[2004]: tracker-extract.service: Succeeded.
+```
+
+Чтобы проиллюстрировать количество отображаемых строк, мы можем передать вывод команды `head` по конвейеру команде `nl`, которая отобразит количество строк текста, переданных в команду:
+
+```console
+$ sudo head /var/log/syslog | nl
+1	Nov 12 08:04:30 hypatia rsyslogd: [origin software="rsyslogd" swVersion="8.1910.0" x-pid="811" x-info="https://www.rsyslog.com"] rsyslogd was HUPed
+2	Nov 12 08:04:30 hypatia systemd[1]: logrotate.service: Succeeded.
+3	Nov 12 08:04:30 hypatia systemd[1]: Started Rotate log files.
+4	Nov 12 08:04:30 hypatia vdr: [928] video directory scanner thread started (pid=882, tid=928, prio=low)
+5	Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'A - ATSC'
+6	Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'C - DVB-C'
+7	Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'S - DVB-S'
+8	Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'T - DVB-T'
+9	Nov 12 08:04:30 hypatia vdr[882]: vdr: no primary device found - using first device!
+10	Nov 12 08:04:30 hypatia vdr: [929] epg data reader thread started (pid=882, tid=929, prio=high)
+```
+
+И мы можем сделать то же самое, передав вывод команды `tail` в команду `wc`, которая по умолчанию будет подсчитывать количество слов в документе, и используя переключатель `-l`, чтобы распечатать количество строк текста, которое команда прочитала:
+
+```console
+$ sudo tail /var/log/syslog | wc -l
+10
+```
+
+Если администратору нужно просмотреть больше (или меньше) начала или конца файла, можно использовать параметр `-n` для ограничения вывода команд:
+
+```console
+$ sudo tail -n 5 /var/log/syslog
+Nov 13 10:37:24 hypatia systemd[2004]: tracker-extract.service: Succeeded.
+Nov 13 10:37:42 hypatia dbus-daemon[2023]: [session uid=1000 pid=2023] Activating via systemd: service name='org.freedesktop.Tracker1.Miner.Extract' unit='tracker-extract.service' requested by ':1.73' (uid=1000 pid=2425 comm="/usr/lib/tracker/tracker-miner-fs ")
+Nov 13 10:37:42 hypatia systemd[2004]: Starting Tracker metadata extractor...
+Nov 13 10:37:43 hypatia dbus-daemon[2023]: [session uid=1000 pid=2023] Successfully activated service 'org.freedesktop.Tracker1.Miner.Extract'
+Nov 13 10:37:43 hypatia systemd[2004]: Started Tracker metadata extractor.
+$ sudo head -n 12 /var/log/syslog
+Nov 12 08:04:30 hypatia rsyslogd: [origin software="rsyslogd" swVersion="8.1910.0" x-pid="811" x-info="https://www.rsyslog.com"] rsyslogd was HUPed
+Nov 12 08:04:30 hypatia systemd[1]: logrotate.service: Succeeded.
+Nov 12 08:04:30 hypatia systemd[1]: Started Rotate log files.
+Nov 12 08:04:30 hypatia vdr: [928] video directory scanner thread started (pid=882, tid=928, prio=low)
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'A - ATSC'
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'C - DVB-C'
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'S - DVB-S'
+Nov 12 08:04:30 hypatia vdr: [882] registered source parameters for 'T - DVB-T'
+Nov 12 08:04:30 hypatia vdr[882]: vdr: no primary device found - using first device!
+Nov 12 08:04:30 hypatia vdr: [929] epg data reader thread started (pid=882, tid=929, prio=high)
+Nov 12 08:04:30 hypatia vdr: [882] no DVB device found
+Nov 12 08:04:30 hypatia vdr: [882] initializing plugin: vnsiserver (1.8.0): VDR-Network-Streaming-Interface (VNSI) Server
+```
+
+## Основы sed, редактор потоков
