Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -571,7 +571,28 @@ john:x:1006:1000:John Chapel,Sales,,,Main Office:/home/john:/bin/bash
 
 ## Упражнения на размышления
 
+1. Еще раз используя файл `mypasswd` из предыдущих упражнений, придумайте команду Bash, которая выберет одного человека из главного офиса, чтобы выиграть розыгрыш розыгрыша. Используйте команду `sed`, чтобы распечатать только строки для главного офиса, а затем последовательность команд `cut`, чтобы получить имя каждого пользователя из этих строк. Затем вы захотите отсортировать эти имена случайным образом и распечатать только первое имя из списка. 
 
+2. Сколько человек работает в отделах финансов, инжиниринга и продаж? (Рассмотрите возможность изучения команды `uniq`). 
+
+3. Теперь вы хотите подготовить файл CSV (значения, разделенные запятыми), чтобы можно было легко импортировать из файла `mypasswd` в предыдущем примере файл `names.csv` в LibreOffice. Содержимое файла будет иметь следующий формат:
+
+```console
+First Name,Last Name,Position
+Carol,Smith,Finance
+...
+John,Chapel,Sales
+```
+
+Совет: используйте команды `sed`, `cut` и `paste` для достижения желаемых результатов. Обратите внимание, что запятая (`,`) будет разделителем для этого файла.
+
+4. Предположим, что электронная таблица `names.csv`, созданная в предыдущем упражнении, является важным файлом, и мы хотим убедиться, что никто не будет вмешиваться в него с момента отправки кому-то и момента, когда получатель получит его. Как мы можем гарантировать целостность этого файла с помощью `md5sum`? 
+
+5. Вы пообещали себе, что будете читать классическую книгу по 100 строк в день, и решили начать с *Mariner and Mystic* Германа Мелвилла. Придумайте команду с помощью `split`, которая разделит эту книгу на разделы по 100 строк в каждом. Чтобы получить книгу в текстовом формате, найдите ее на https://www.gutenberg.org. 
+
+6. Какой список вы получите, используя команду `ls -l` в каталоге `/etc`? Используя команду `cut` на выходе данной команды `ls`, как бы вы отобразили только имена файлов? А как насчет имени файла и владельца файлов? Наряду с командами `ls -l` и `cut` используйте команду `tr`, чтобы сжать несколько экземпляров пробела в один пробел, чтобы облегчить форматирование вывода с помощью команды `cut`. 
+
+7. В этом упражнении предполагается, что вы находитесь на реальной машине (а не на виртуальной). У вас также должен быть USB-накопитель. Просмотрите страницы руководства по команде `tail` и узнайте, как следить за файлом, когда к нему добавляется текст. Наблюдая за выводом команды `tail` в файле `/var/log/syslog`, вставьте USB-накопитель. Запишите полную команду, которую вы бы использовали для получения продукта, производителя и общего объема памяти вашего USB-накопителя.
 
 
 ## Резюме
