Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -597,6 +597,68 @@ John,Chapel,Sales
 
 ## Резюме
 
+Работа с текстовыми потоками имеет большое значение при администрировании любой системы Linux. Текстовые потоки можно обрабатывать с помощью сценариев для автоматизации повседневных задач или поиска соответствующей отладочной информации в файлах журналов. Вот краткое изложение команд, рассмотренных в этом уроке: 
+
+`cat`  
+Используется для объединения или чтения текстовых файлов. 
+
+`bzcat`  
+Позволяет обрабатывать или читать файлы, сжатые с помощью метода `bzip2`. 
+
+`xzcat`  
+Позволяет обрабатывать или читать файлы, сжатые с использованием метода `xz`. 
+
+`zcat`  
+Позволяет обрабатывать или читать файлы, сжатые с помощью метода `gzip`. 
+
+`less`  
+Эта команда разбивает содержимое файла на страницы и обеспечивает функции навигации и поиска. 
+
+`head`  
+Эта команда по умолчанию отображает первые 10 строк файла. С помощью переключателя `-n` можно отобразить меньше или больше строк. 
+
+`tail`  
+Эта команда по умолчанию отображает последние 10 строк файла. С помощью параметра `-n` можно отобразить меньше или больше строк. Параметр `-f` используется для отслеживания вывода текстового файла, в который записываются новые данные. 
+
+`wc`  
+Сокращение от количество слов, но в зависимости от используемых вами параметров он будет подсчитывать символы, слова и строки. 
+
+`sort`  
+Используется для организации вывода списка в алфавитном порядке, в обратном алфавитном порядке или в случайном порядке. 
+
+`uniq`  
+Используется для перечисления (и подсчета) совпадающих строк. 
+
+`od`  
+Команда «восьмеричный дамп» используется для отображения двоичного файла в восьмеричной, десятичной или шестнадцатеричной системе счисления. 
+
+`nl`  
+Команда «числовая строка» отобразит количество строк в файле, а также воссоздает файл с каждой строкой, к которой добавляется номер строки. 
+
+`sed`  
+Редактор потока можно использовать для поиска совпадающих вхождений строк с помощью регулярных выражений, а также для редактирования файлов с использованием заранее определенных шаблонов. 
+
+`tr`  
+Команда преобразовать может заменять символы, а также удалять и сжимать повторяющиеся символы. 
+
+`cut`  
+Эта команда может печатать столбцы текстовых файлов как поля на основе разделителя символов файла. 
+
+`paste`  
+Объединяет файлы в столбцы на основе использования разделителей полей. 
+
+`split`  
+Эта команда может разбивать файлы большего размера на более мелкие в зависимости от критериев, установленных параметрами команды. 
+
+`md5sum`  
+Используется для вычисления хеш-значения MD5 файла. Также используется для проверки файла на соответствие существующему хеш-значению, чтобы гарантировать целостность файла. 
+
+`sha256sum`  
+Используется для вычисления хэш-значения SHA256 файла. Также используется для проверки файла на соответствие существующему хеш-значению, чтобы гарантировать целостность файла. 
+
+`sha512sum`  
+Используется для вычисления хэш-значения SHA512 файла. Также используется для проверки файла на соответствие существующему хеш-значению, чтобы гарантировать целостность файла.
 
 
 ## Ответы на упражнения для закрепления
+
