Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -662,3 +662,105 @@ John,Chapel,Sales
 
 ## Ответы на упражнения для закрепления
 
+**1. Кто-то только что подарил вашей школе ноутбук, и теперь вы хотите установить на него Linux. Здесь нет руководства, и вы были вынуждены загрузить его с флэш-накопителя USB без какой-либо графики. У вас есть терминал оболочки, и вы знаете, что для каждого процессора в файле `/proc/cpuinfo` будет строка для него:**
+
+```console
+processor	: 0
+vendor_id	: GenuineIntel
+cpu family	: 6
+model		: 158
+
+(lines skipped)
+
+processor	: 1
+vendor_id	: GenuineIntel
+cpu family	: 6
+model		: 158
+
+(more lines skipped)
+```
+
+* Использование команд `grep` и `wc` покажет, сколько у вас процессоров. 
+
+Вот два варианта:
+
+```console
+$ cat /proc/cpuinfo | grep processor | wc -l
+$ grep processor /proc/cpuinfo | wc -l
+```
+
+Теперь, когда вы знаете, что есть несколько способов сделать то же самое, когда вы должны использовать тот или другой? Это действительно зависит от нескольких факторов, два из которых наиболее важны - это производительность и удобочитаемость. В большинстве случаев вы будете использовать команды оболочки внутри сценариев оболочки для автоматизации ваших задач, и чем больше и сложнее становятся ваши сценарии, тем больше вам нужно беспокоиться о том, чтобы они оставались быстрыми.
+
+* Сделайте то же самое с `sed` вместо `grep`.
+
+Теперь вместо `grep` мы попробуем это с помощью `sed`:
+
+```console
+$ sed -n /processor/p /proc/cpuinfo | wc -l
+```
+
+Здесь мы использовали `sed` с параметром `-n`, поэтому `sed` не будет печатать ничего, кроме того, что соответствует процессору выражений, как указано командой `p`. Как мы делали в решениях `grep`, `wc -l` подсчитает количество строк, то есть количество процессоров, которые у нас есть. 
+
+Изучите следующий пример:
+
+```console
+$ sed -n /processor/p /proc/cpuinfo | sed -n '$='
+```
+
+Эта последовательность команд обеспечивает те же результаты, что и в предыдущем примере, где вывод `sed` был передан в команду `wc`. Разница здесь в том, что вместо использования `wc -l` для подсчета количества строк снова вызывается `sed` для обеспечения эквивалентной функциональности. И снова мы подавляем вывод `sed` с помощью опции `-n`, за исключением выражения, которое мы явно вызываем, а именно `'$ ='`. Это выражение указывает `sed` сопоставить последнюю строку (`$`), а затем распечатать этот номер строки (`=`).
+
+
+**2. Изучите свой локальный файл `/etc/passwd` с помощью команд `grep`, `sed`, `head` и `tail` для выполнения следующих задач:**
+* Какие пользователи имеют доступ к оболочке Bash? 
+* В вашей системе есть разные пользователи, которые работают с определенными программами или в административных целях. У них нет доступа к оболочке. Сколько из них существует в вашей системе? 
+* Сколько пользователей и групп существует в вашей системе (помните: используйте только файл `/etc/passwd`)? 
+* Укажите только первую, последнюю и десятую строки вашего файла `/etc/passwd`.
+
+**3. Рассмотрим этот пример файла `/etc/passwd`. Скопируйте приведенные ниже строки в локальный файл с именем mypasswd для этого упражнения.**
+
+```console
+root:x:0:0:root:/root:/bin/bash
+daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin
+bin:x:2:2:bin:/bin:/usr/sbin/nologin
+sys:x:3:3:sys:/dev:/usr/sbin/nologin
+sync:x:4:65534:sync:/bin:/bin/sync
+nvidia-persistenced:x:121:128:NVIDIA Persistence Daemon,,,:/nonexistent:/sbin/nologin
+libvirt-qemu:x:64055:130:Libvirt Qemu,,,:/var/lib/libvirt:/usr/sbin/nologin
+libvirt-dnsmasq:x:122:133:Libvirt Dnsmasq,,,:/var/lib/libvirt/dnsmasq:/usr/sbin/nologin
+carol:x:1000:2000:Carol Smith,Finance,,,Main Office:/home/carol:/bin/bash
+dave:x:1001:1000:Dave Edwards,Finance,,,Main Office:/home/dave:/bin/ksh
+emma:x:1002:1000:Emma Jones,Finance,,,Main Office:/home/emma:/bin/bash
+frank:x:1003:1000:Frank Cassidy,Finance,,,Main Office:/home/frank:/bin/bash
+grace:x:1004:1000:Grace Kearns,Engineering,,,Main Office:/home/grace:/bin/ksh
+henry:x:1005:1000:Henry Adams,Sales,,,Main Office:/home/henry:/bin/bash
+john:x:1006:1000:John Chapel,Sales,,,Main Office:/home/john:/bin/bash
+```
+
+* Перечислите всех пользователей в группе `1000` (используйте `sed`, чтобы выбрать только соответствующее поле) из вашего файла `mypasswd`. 
+* Укажите только полные имена всех пользователей этой группы (используйте `sed` и `cut`).
+
+
+## Ответы на упражнения для размышления
+
+1. Еще раз используя файл `mypasswd` из предыдущих упражнений, придумайте команду Bash, которая выберет одного человека из главного офиса, чтобы выиграть розыгрыш розыгрыша. Используйте команду `sed`, чтобы распечатать только строки для главного офиса, а затем последовательность команд `cut`, чтобы получить имя каждого пользователя из этих строк. Затем вы захотите отсортировать эти имена случайным образом и распечатать только первое имя из списка. 
+
+2. Сколько человек работает в отделах финансов, инжиниринга и продаж? (Рассмотрите возможность изучения команды `uniq`). 
+
+3. Теперь вы хотите подготовить файл CSV (значения, разделенные запятыми), чтобы можно было легко импортировать из файла `mypasswd` в предыдущем примере файл `names.csv` в LibreOffice. Содержимое файла будет иметь следующий формат:
+
+```console
+First Name,Last Name,Position
+Carol,Smith,Finance
+...
+John,Chapel,Sales
+```
+
+Совет: используйте команды `sed`, `cut` и `paste` для достижения желаемых результатов. Обратите внимание, что запятая (`,`) будет разделителем для этого файла.
+
+4. Предположим, что электронная таблица `names.csv`, созданная в предыдущем упражнении, является важным файлом, и мы хотим убедиться, что никто не будет вмешиваться в него с момента отправки кому-то и момента, когда получатель получит его. Как мы можем гарантировать целостность этого файла с помощью `md5sum`? 
+
+5. Вы пообещали себе, что будете читать классическую книгу по 100 строк в день, и решили начать с *Mariner and Mystic* Германа Мелвилла. Придумайте команду с помощью `split`, которая разделит эту книгу на разделы по 100 строк в каждом. Чтобы получить книгу в текстовом формате, найдите ее на https://www.gutenberg.org. 
+
+6. Какой список вы получите, используя команду `ls -l` в каталоге `/etc`? Используя команду `cut` на выходе данной команды `ls`, как бы вы отобразили только имена файлов? А как насчет имени файла и владельца файлов? Наряду с командами `ls -l` и `cut` используйте команду `tr`, чтобы сжать несколько экземпляров пробела в один пробел, чтобы облегчить форматирование вывода с помощью команды `cut`. 
+
+7. В этом упражнении предполагается, что вы находитесь на реальной машине (а не на виртуальной). У вас также должен быть USB-накопитель. Просмотрите страницы руководства по команде `tail` и узнайте, как следить за файлом, когда к нему добавляется текст. Наблюдая за выводом команды `tail` в файле `/var/log/syslog`, вставьте USB-накопитель. Запишите полную команду, которую вы бы использовали для получения продукта, производителя и общего объема памяти вашего USB-накопителя.
