Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -689,7 +689,7 @@ $ cat /proc/cpuinfo | grep processor | wc -l
 $ grep processor /proc/cpuinfo | wc -l
 ```
 
-Теперь, когда вы знаете, что есть несколько способов сделать то же самое, когда вы должны использовать тот или другой? Это действительно зависит от нескольких факторов, два из которых наиболее важны - это производительность и удобочитаемость. В большинстве случаев вы будете использовать команды оболочки внутри сценариев оболочки для автоматизации ваших задач, и чем больше и сложнее становятся ваши сценарии, тем больше вам нужно беспокоиться о том, чтобы они оставались быстрыми.
+Теперь, когда вы знаете, что есть несколько способов сделать то же самое, когда вы должны использовать тот или иной вариант? Это действительно зависит от нескольких факторов, два наиболее важных - это производительность и удобочитаемость. В большинстве случаев вы будете использовать команды оболочки внутри сценариев оболочки для автоматизации ваших задач, и чем больше и сложнее становятся ваши сценарии, тем больше вам нужно беспокоиться о том, чтобы они оставались быстрыми.
 
 * Сделайте то же самое с `sed` вместо `grep`.
 
@@ -699,7 +699,7 @@ $ grep processor /proc/cpuinfo | wc -l
 $ sed -n /processor/p /proc/cpuinfo | wc -l
 ```
 
-Здесь мы использовали `sed` с параметром `-n`, поэтому `sed` не будет печатать ничего, кроме того, что соответствует процессору выражений, как указано командой `p`. Как мы делали в решениях `grep`, `wc -l` подсчитает количество строк, то есть количество процессоров, которые у нас есть. 
+Здесь мы использовали `sed` с параметром `-n`, поэтому `sed` не выведет ничего, кроме того, что соответствует выражению `processor`, как указано командой `p`. Как мы делали в решениях `grep`, `wc -l` подсчитает количество строк, то есть количество процессоров, которые у нас есть. 
 
 Изучите следующий пример:
 
@@ -711,10 +711,44 @@ $ sed -n /processor/p /proc/cpuinfo | sed -n '$='
 
 
 **2. Изучите свой локальный файл `/etc/passwd` с помощью команд `grep`, `sed`, `head` и `tail` для выполнения следующих задач:**
-* Какие пользователи имеют доступ к оболочке Bash? 
-* В вашей системе есть разные пользователи, которые работают с определенными программами или в административных целях. У них нет доступа к оболочке. Сколько из них существует в вашей системе? 
-* Сколько пользователей и групп существует в вашей системе (помните: используйте только файл `/etc/passwd`)? 
+
+* Какие пользователи имеют доступ к оболочке Bash?
+```console
+$ grep ":/bin/bash$" /etc/passwd
+```
+Мы улучшим этот ответ, отображая только имя пользователя, использующего оболочку Bash.
+```console
+$ grep ":/bin/bash$" /etc/passwd | cut -d: -f1
+```
+Имя пользователя - это первое поле (параметр `-f1` команды `cut`), а файл `/etc/passwd` использует `:` в качестве разделителей (`-d:` параметр команды `cut`) мы просто перенаправляем вывод команды `grep` в соответствующую команду `cut`.
+
+* В вашей системе есть разные пользователи, которые работают с определенными программами или в административных целях. У них нет доступа к оболочке. Сколько из них существует в вашей системе?  
+Самый простой способ найти это - распечатать строки для учетных записей, которые не используют оболочку Bash:
+```console
+$ grep -v ":/bin/bash$" /etc/passwd | wc -l
+```
+
+* Сколько пользователей и групп существует в вашей системе (помните: используйте только файл `/etc/passwd`)?  
+Первое поле одной из строк в вашем файле `/etc/passwd` - это имя пользователя, второе - обычно `x`, указывающее, что пароль пользователя здесь не хранится (он зашифрован в файле `/etc/shadow`). Третий - это идентификатор пользователя (UID), а четвертый - это идентификатор группы (GID). Итак, это должно дать нам количество пользователей:
+```console
+$ cut -d: -f3 /etc/passwd | wc -l
+```
+Что ж, в большинстве случаев так и будет. Однако бывают ситуации, когда вы устанавливаете разных суперпользователей или другие особые типы пользователей, использующих один и тот же UID (идентификатор пользователя). Итак, на всякий случай мы передадим результат нашей команды `cut` по конвейеру команде `sort`, а затем посчитаем количество строк.
+```console
+$ cut -d: -f3 /etc/passwd | sort -u | wc -l
+```
+Теперь по количеству групп:
+```console
+$ cut -d: -f4 /etc/passwd | sort -u | wc -l
+```
+
 * Укажите только первую, последнюю и десятую строки вашего файла `/etc/passwd`.
+Это будет делать:
+```console
+$ sed -n -e '1'p -e '10'p -e '$'p /etc/passwd
+```
+Помните, что параметр `-n` указывает `sed` не печатать ничего, кроме того, что указано командой `p`. Используемый здесь знак доллара (`$`) - это регулярное выражение, обозначающее последнюю строку файла.
+
 
 **3. Рассмотрим этот пример файла `/etc/passwd`. Скопируйте приведенные ниже строки в локальный файл с именем mypasswd для этого упражнения.**
 
@@ -737,7 +771,41 @@ john:x:1006:1000:John Chapel,Sales,,,Main Office:/home/john:/bin/bash
 ```
 
 * Перечислите всех пользователей в группе `1000` (используйте `sed`, чтобы выбрать только соответствующее поле) из вашего файла `mypasswd`. 
+GID - это четвертое поле в файле `/etc/passwd`. У вас может возникнуть соблазн попробовать это:
+```console
+$ sed -n /1000/p mypasswd
+```
+В этом случае вы также получите эту строку:
+```console
+carol:x:1000:2000:Carol Smith,Finance,,,Main Office:/home/carol:/bin/bash
+```
+Вы знаете, что это неверно, поскольку Кэрол Смит является членом GID 2000, и совпадение произошло из-за UID. Однако вы могли заметить, что после GID следующее поле начинается с символа верхнего регистра. Мы можем использовать регулярное выражение для решения этой проблемы.
+```console
+$ sed -n /:1000:[A-Z]/p mypasswd
+```
+Выражение `[A-Z]` будет соответствовать любому одиночному символу верхнего регистра. Подробнее об этом вы узнаете в соответствующем уроке.
+
 * Укажите только полные имена всех пользователей этой группы (используйте `sed` и `cut`).
+Используйте ту же технику, что и в первой части этого упражнения, и передайте ее команде вырезания.
+```console
+$ sed -n /:1000:[A-Z]/p mypasswd | cut -d: -f5
+Dave Edwards,Finance,,,Main Office
+Emma Jones,Finance,,,Main Office
+Frank Cassidy,Finance,,,Main Office
+Grace Kearns,Engineering,,,Main Office
+Henry Adams,Sales,,,Main Office
+John Chapel,Sales,,,Main Office
+```
+Не совсем там! Обратите внимание, как поля внутри результатов можно разделить знаком,. Поэтому мы передадим вывод другой команде вырезания, используя в качестве разделителя.
+```console
+$ sed -n /:1000:[A-Z]/p mypasswd | cut -d: -f5 | cut -d, -f1
+Dave Edwards
+Emma Jones
+Frank Cassidy
+Grace Kearns
+Henry Adams
+John Chapel
+```
 
 
 ## Ответы на упражнения для размышления
